--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,8 @@
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
@@ -45,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset from the provided URL\n",
     "data_url = 'https://raw.githubusercontent.com/4GeeksAcademy/logistic-regression-project-tutorial/main/bank-marketing-campaign-data.csv'\n",
-    "data_df = pd.read_csv(data_url, sep=';')"
+    "data_df = pd.read_csv(data_url, sep=';')\n"
    ]
   },
   {
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,18 +85,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>56</td>\n",
+       "      <td>57</td>\n",
+       "      <td>37</td>\n",
+       "      <td>40</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>job</th>\n",
+       "      <td>housemaid</td>\n",
+       "      <td>services</td>\n",
+       "      <td>services</td>\n",
+       "      <td>admin.</td>\n",
+       "      <td>services</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>marital</th>\n",
+       "      <td>married</td>\n",
+       "      <td>married</td>\n",
+       "      <td>married</td>\n",
+       "      <td>married</td>\n",
+       "      <td>married</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>education</th>\n",
+       "      <td>basic.4y</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>basic.6y</td>\n",
+       "      <td>high.school</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>default</th>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>housing</th>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loan</th>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>contact</th>\n",
+       "      <td>telephone</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>telephone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <td>may</td>\n",
+       "      <td>may</td>\n",
+       "      <td>may</td>\n",
+       "      <td>may</td>\n",
+       "      <td>may</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day_of_week</th>\n",
+       "      <td>mon</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>mon</td>\n",
+       "      <td>mon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>duration</th>\n",
+       "      <td>261</td>\n",
+       "      <td>149</td>\n",
+       "      <td>226</td>\n",
+       "      <td>151</td>\n",
+       "      <td>307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>campaign</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pdays</th>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "      <td>999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>previous</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>poutcome</th>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>nonexistent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>emp.var.rate</th>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cons.price.idx</th>\n",
+       "      <td>93.994</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>93.994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cons.conf.idx</th>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>-36.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>euribor3m</th>\n",
+       "      <td>4.857</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>4.857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nr.employed</th>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>5191.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y</th>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          0            1            2            3  \\\n",
+       "age                      56           57           37           40   \n",
+       "job               housemaid     services     services       admin.   \n",
+       "marital             married      married      married      married   \n",
+       "education          basic.4y  high.school  high.school     basic.6y   \n",
+       "default                  no      unknown           no           no   \n",
+       "housing                  no           no          yes           no   \n",
+       "loan                     no           no           no           no   \n",
+       "contact           telephone    telephone    telephone    telephone   \n",
+       "month                   may          may          may          may   \n",
+       "day_of_week             mon          mon          mon          mon   \n",
+       "duration                261          149          226          151   \n",
+       "campaign                  1            1            1            1   \n",
+       "pdays                   999          999          999          999   \n",
+       "previous                  0            0            0            0   \n",
+       "poutcome        nonexistent  nonexistent  nonexistent  nonexistent   \n",
+       "emp.var.rate            1.1          1.1          1.1          1.1   \n",
+       "cons.price.idx       93.994       93.994       93.994       93.994   \n",
+       "cons.conf.idx         -36.4        -36.4        -36.4        -36.4   \n",
+       "euribor3m             4.857        4.857        4.857        4.857   \n",
+       "nr.employed          5191.0       5191.0       5191.0       5191.0   \n",
+       "y                        no           no           no           no   \n",
+       "\n",
+       "                          4  \n",
+       "age                      56  \n",
+       "job                services  \n",
+       "marital             married  \n",
+       "education       high.school  \n",
+       "default                  no  \n",
+       "housing                  no  \n",
+       "loan                    yes  \n",
+       "contact           telephone  \n",
+       "month                   may  \n",
+       "day_of_week             mon  \n",
+       "duration                307  \n",
+       "campaign                  1  \n",
+       "pdays                   999  \n",
+       "previous                  0  \n",
+       "poutcome        nonexistent  \n",
+       "emp.var.rate            1.1  \n",
+       "cons.price.idx       93.994  \n",
+       "cons.conf.idx         -36.4  \n",
+       "euribor3m             4.857  \n",
+       "nr.employed          5191.0  \n",
+       "y                        no  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_df.head().transpose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41188 entries, 0 to 41187\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   age             41188 non-null  int64  \n",
+      " 1   job             41188 non-null  object \n",
+      " 2   marital         41188 non-null  object \n",
+      " 3   education       41188 non-null  object \n",
+      " 4   default         41188 non-null  object \n",
+      " 5   housing         41188 non-null  object \n",
+      " 6   loan            41188 non-null  object \n",
+      " 7   contact         41188 non-null  object \n",
+      " 8   month           41188 non-null  object \n",
+      " 9   day_of_week     41188 non-null  object \n",
+      " 10  duration        41188 non-null  int64  \n",
+      " 11  campaign        41188 non-null  int64  \n",
+      " 12  pdays           41188 non-null  int64  \n",
+      " 13  previous        41188 non-null  int64  \n",
+      " 14  poutcome        41188 non-null  object \n",
+      " 15  emp.var.rate    41188 non-null  float64\n",
+      " 16  cons.price.idx  41188 non-null  float64\n",
+      " 17  cons.conf.idx   41188 non-null  float64\n",
+      " 18  euribor3m       41188 non-null  float64\n",
+      " 19  nr.employed     41188 non-null  float64\n",
+      " 20  y               41188 non-null  object \n",
+      "dtypes: float64(5), int64(5), object(11)\n",
+      "memory usage: 6.6+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "data_df.info()"
    ]
@@ -117,6 +408,7 @@
    "outputs": [],
    "source": [
     "# Split the data into training (75%) and testing (25%) sets\n",
+    "training_set = \n",
     "# This ensures we have unseen data to evaluate our final model"
    ]
   },
