--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import random as rd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
@@ -403,13 +404,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into training (75%) and testing (25%) sets\n",
-    "training_set = \n",
-    "# This ensures we have unseen data to evaluate our final model"
+    "# This ensures we have unseen data to evaluate our final model\n",
+    "training_df, test_df = train_test_split(data_df, test_size=25)\n"
    ]
   },
   {
@@ -423,18 +424,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 41163 entries, 35070 to 32747\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   age             41163 non-null  int64  \n",
+      " 1   job             41163 non-null  float64\n",
+      " 2   marital         41163 non-null  float64\n",
+      " 3   education       41163 non-null  float64\n",
+      " 4   default         41163 non-null  float64\n",
+      " 5   housing         41163 non-null  float64\n",
+      " 6   loan            41163 non-null  float64\n",
+      " 7   contact         41163 non-null  float64\n",
+      " 8   month           41163 non-null  float64\n",
+      " 9   day_of_week     41163 non-null  float64\n",
+      " 10  duration        41163 non-null  int64  \n",
+      " 11  campaign        41163 non-null  int64  \n",
+      " 12  pdays           41163 non-null  int64  \n",
+      " 13  previous        41163 non-null  int64  \n",
+      " 14  poutcome        41163 non-null  float64\n",
+      " 15  emp.var.rate    41163 non-null  float64\n",
+      " 16  cons.price.idx  41163 non-null  float64\n",
+      " 17  cons.conf.idx   41163 non-null  float64\n",
+      " 18  euribor3m       41163 non-null  float64\n",
+      " 19  nr.employed     41163 non-null  float64\n",
+      " 20  y               41163 non-null  float64\n",
+      "dtypes: float64(16), int64(5)\n",
+      "memory usage: 6.9 MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Categorical features with 'object' datatypes (string) which need encoding\n",
     "categorical_features = ['y','job','education','marital','default','housing','loan','contact','poutcome','day_of_week','month']\n",
     "\n",
     "# Instantiate a encoder\n",
+    "encoder = OrdinalEncoder()\n",
     "\n",
     "# Encode the categorical features in the training and testing datasets\n",
+    "training_df[categorical_features] = encoder.fit_transform(training_df[categorical_features])\n",
+    "test_df[categorical_features] = encoder.fit_transform(test_df[categorical_features])\n",
     "\n",
-    "# Inspect the result - there should be only float or int datatypes left\n"
+    "# Inspect the result - there should be only float or int datatypes left\n",
+    "training_df.info()"
    ]
   },
   {
@@ -448,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,15 +507,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of random model: 44.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate random predictions for the testing set\n",
     "# This serves as a baseline to compare our model performance against\n",
-    "\n",
+    "predictions = [random.choice([0, 1]) for _ in range(len(test_df))]\n",
     "# Calculate accuracy of random model\n",
-    "\n",
+    "accuracy = accuracy_score(test_df['y'], predictions) * 100\n",
     "# Store the accuracy in the results dictionary\n",
     "results['Random'] = accuracy\n",
     "\n",
@@ -493,11 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of constant \"no\" model: 96.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate accuracy if we always predict 'no' (the majority class)\n",
+    "accuracy = (test_df['y'].value_counts()[0]/len(test_df['y'])) * 100\n",
     "\n",
     "# Store the accuracy in the results dictionary\n",
     "results['Constant No'] = accuracy\n",
