--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -573,15 +573,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing accuracy: 92.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Train a basic logistic regression model with default parameters\n",
+    "model = LogisticRegression()\n",
+    "model.fit(training_df.drop('y', axis=1), training_df['y'])\n",
     "\n",
     "# Make predictions on the testing set\n",
+    "prediction = model.predict(test_df.drop ('y', axis=1))\n",
     "\n",
     "# Calculate accuracy of the test set predictions\n",
+    "accuracy = accuracy_score(test_df ['y'], prediction) * 100\n",
     "\n",
     "# Store the accuracy in the results dictionary\n",
     "results['Regression'] = accuracy\n",
@@ -600,9 +612,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyperparameters: {'fit_intercept': False, 'max_iter': 50, 'solver': 'newton-cg'}\n",
+      "Winning model: LogisticRegression(fit_intercept=False, max_iter=50, solver='newton-cg')\n"
+     ]
+    }
+   ],
    "source": [
     "# Define hyperparameters to search over\n",
     "# These parameters can significantly affect model performance\n",
@@ -614,13 +635,16 @@
     "\n",
     "# Use grid search with cross-validation to find best hyperparameters\n",
     "# This systematically tests all combinations to find the optimal settings\n",
-    "\n",
+    "model = LogisticRegression()\n",
+    "grid = GridSearchCV(estimator=model, param_grid=hyperparameters, scoring = 'accuracy', cv = 5)\n",
+    "grid.fit(training_df.drop('y', axis=1), training_df['y'])\n",
     "\n",
     "# Save the best model and parameter combination\n",
     "winning_parameters = grid.best_params_\n",
     "winning_model = grid.best_estimator_\n",
     "\n",
-    "print(f'Best hyperparameters: {winning_parameters}')"
+    "print(f'Best hyperparameters: {winning_parameters}')\n",
+    "print(f'Winning model: {winning_model}')"
    ]
   },
   {
